Require virtual threads
Update microhttp_ring_adapter.clj

Update microhttp_ring_adapter.clj